<resources>
    <string name="app_name">AppNews</string>
    <string name="hello_blank_fragment">hello</string>
    <string name="news_string">Новости</string>
    <string name="bookmarks_string">Избранное</string>
    <string name="settings_string">Настройки</string>
    <string name="about">Информация</string>
    <string name="main_string">Main</string>
    <string name="settings_and_features">Settings and Features</string>
    <string name="test">test</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="delete_article">article was deleted</string>
    <string name="save_article">Article saved successfully</string>
    <string name="enable_theme_string">Включить темную тему</string>
    <string name="used_technology_string">Используемые технологии:</string>
    <string name="retrofit2">Retrofit2</string>
    <string name="dagger2">Dagger2</string>
    <string name="architecture_components_string">Architecture Components (Room, ViewModel, LiveData, Navigation)</string>
    <string name="glide">Glide</string>
    <string name="coroutines">Coroutines</string>
    <string name="material_design">Material Design</string>
    <string name="rxjava">RxJava</string>
    <string name="lottie">Lottie</string>
    <string name="mvvm">MVVM</string>
</resources>