<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.navigationDrawer.information.InformationFragment">

    <TextView
        android:id="@+id/used_technology_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin"
        android:text="@string/used_technology_string"
        android:textColor="@color/titleTextColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/retrofit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin"
        android:text="@string/retrofit2"
        android:textColor="@color/titleTextColor"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/used_technology_textView" />

    <TextView
        android:id="@+id/dagger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin"
        android:text="@string/dagger2"
        android:textColor="@color/titleTextColor"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/retrofit" />

    <TextView
        android:id="@+id/architecture_components"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin"
        android:text="@string/architecture_components_string"
        android:textColor="@color/titleTextColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dagger" />

    <TextView
        android:id="@+id/glide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin"
        android:text="@string/glide"
        android:textColor="@color/titleTextColor"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/architecture_components" />

    <TextView
        android:id="@+id/coroutines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin"
        android:text="@string/coroutines"
        android:textColor="@color/titleTextColor"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/glide" />

    <TextView
        android:id="@+id/material_design"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin"
        android:text="@string/material_design"
        android:textColor="@color/titleTextColor"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coroutines" />

    <TextView
        android:id="@+id/rxJava"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin"
        android:text="@string/rxjava"
        android:textColor="@color/titleTextColor"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/material_design" />

    <TextView
        android:id="@+id/lottie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin"
        android:text="@string/lottie"
        android:textColor="@color/titleTextColor"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rxJava" />

    <TextView
        android:id="@+id/mvvm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin"
        android:text="@string/mvvm"
        android:textColor="@color/titleTextColor"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lottie" />


</androidx.constraintlayout.widget.ConstraintLayout>